fix: modify jsx and styling to prevent button hovering on mobile, unify button size on all vw

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -4,6 +4,12 @@
   &:hover {
     font-size: calc(var(--button-font-size-main) * 1.25);
   }
+  @media screen and (max-width: 450px) {
+    transition: none;
+    &:hover {
+      font-size: var(--button-font-size-main);
+    }
+  }
 }
 
 .button-disabled {
